--- a/package.json
+++ b/package.json
@@ -33,11 +33,10 @@
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.13.5",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "styled-components": "^6.0.0-rc.3"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1"
