Animated OS org icons and splited experience and OS

--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.13.5",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
